--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
       a:hover                           { color: #64B5F6; }
       a:active  { transition: color .15s; color: #2196F3; }
     </style>
+    <style>
+      .birdSvg {
+        width: 50%;
+        float: left;
+      }
+      @media (min-width: 600px) {
+        .birdSvg {
+          width: 33%;
+        }
+      }
+    </style>
 
     <!-- github single page app hack -->
     <!-- http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/ -->
